Add an option for keeping the window open after the last session closes.

BUG:308850